compiler/tests/fixtures/invalid/semantics/precast_on_non_reserved.viv
// Non-reserved action with a non-initiator precast role — should be rejected

action bad-precast:
    roles:
        @actor:
            as: initiator
        @sidekick:
            as: character, precast
